[package]

name = "mockups"
version = "0.0.6"
authors = ["Oldrich Vetesnik <oldrich.vetesnik@gmail.com>"]

[dependencies.url]

git = "https://github.com/servo/rust-url.git"

[dependencies.image]

git = "https://github.com/PistonDevelopers/rust-image.git"

[dependencies.rust-mustache]

# Upstream, try when patched
# git = "https://github.com/erickt/rust-mustache.git"
# Bugfixes
git = "https://github.com/tsurai/rust-mustache.git"
