[package]

name = "mockups"
version = "0.0.6"
authors = ["Oldrich Vetesnik <oldrich.vetesnik@gmail.com>"]

[dependencies]
url = "0.2"
image = "0.2"
regex_macros = "0.1"
regex = "0.1"
getopts = "0.1"
rustc-serialize = "0.2"
# mustache = "0.4"

[dependencies.rust-mustache]

git = "https://github.com/ProtectedMode/rust-mustache.git"
