[package]
name = "mockups"
version = "0.0.8"
authors = ["Oldrich Vetesnik <oldrich.vetesnik@gmail.com>"]

[dependencies]
url = "0.2"
# Image resize is currently (0.3.11) being uncompressed,
# try when new version comes out.
# image = "0.3"
# regex_macros = "0.1"
regex = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"
mustache = "0.6"
threadpool = "0.1"
sys-info = "0.3"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image.git"
rev = "720dcc9d23058d66201baa8f7e2671c4fe21bb5e"
